force-app/main/default/objects/Parcela_contrato__c/Parcela_contrato__c.object-meta.xml
<CustomObject>
    <label>Parcela do contrato</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nome da Parcela do contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcelas do contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>