force-app/main/default/objects/Parcela_contrato__c/fields/Data_notificacao__c.field-meta.xml
<CustomField>
    <fullName>Data_notificacao__c</fullName>
    <label>Data da notificação</label>
    <type>DateTime</type>
</CustomField>