force-app/main/default/objects/Parcela_contrato__c/fields/Data_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Data_vencimento__c</fullName>
    <label>Data de vencimento</label>
    <type>Date</type>
</CustomField>