force-app/main/default/objects/Parcela_contrato__c/fields/Esquema_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Esquema_pagamento__c</fullName>
    <label>Esquema de pagamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>