force-app/main/default/objects/Parcela_contrato__c/fields/Juros__c.field-meta.xml
<CustomField>
    <fullName>Juros__c</fullName>
    <label>Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>