force-app/main/default/objects/Parcela_contrato__c/fields/Mes_Ano__c.field-meta.xml
<CustomField>
    <fullName>Mes_Ano__c</fullName>
    <formula>TEXT(MONTH( Data_vencimento__c )) &amp; &quot;/&quot; &amp;  TEXT(YEAR(Data_vencimento__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês Ano</label>
    <type>Text</type>
</CustomField>