force-app/main/default/objects/Parcela_contrato__c/fields/Reserva__c.field-meta.xml
<CustomField>
    <fullName>Reserva__c</fullName>
    <label>Reserva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmada</fullName>
            </value>
            <value>
                <fullName>Não Confirmada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>